--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,27 @@
 * {
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+
+
+
+
+
+
+
+
 }
 
 :root {
   --primary: #fdc91eab;
-  --black: #000000e8;
-  --blackLighter: #9E9E9E;
+  --black: rgb(26, 25, 25);
+  --blackLighter: #1a1919;
   --grayLight: #F5F5F5;
   --grayMedium: #e5e5e5; 
   --white: #ffffffee;
   --yellow: #fdcb18c0;
-  --blue: #2e4379;
+  --blue: #2e4379de;
  --purple: #79297f;
-  --frontEnd: #fdff6bd3;
+  --frontEnd: #fdff6bce;
   --backEnd: #fdc91e83;
 }
 
